    - Fix markup, by adding sections between parenthesis for man page
      references, escaping dash characters, and applying bold for programs,
      variable names and command-line options, and italic for filenames and
      variable values.
    - Fix some typos.
  * Use UTF-8 copyright symbol instead of (C).
  * Stop linkifying the author information to dead URLs in the footer.

 -- Guillem Jover <guillem@debian.org>  Tue, 26 Feb 2019 04:33:12 +0100

dpkg-www (2.58) unstable; urgency=medium

  * Take over maintainership as part of the Dpkg Developers umbrella.
    (Closes: #738903)
  * Namespace debhelper fragment files with binary package name.
  * Remove lintian override about sensible-utils, now that lintian has been
    fixed.
  * Lower-case package synopsis.
  * Bump Standards-Version to 4.3.0 (no changes needed).
  * Bump debhelper compatibility level to 11.
  * Move dwww and info2www from Depends to Recommends.
  * Use dpkg-query directly instead of via the dpkg wrapper.
  * Use dpkg-query instead of accessing the internal dpkg database directly.

 -- Guillem Jover <guillem@debian.org>  Sat, 02 Feb 2019 04:01:49 +0100

dpkg-www (2.57) unstable; urgency=medium

  * QA upload.
  * Update archive section names and descriptions. (Closes: #847532)
  * Wrap and sort debian/control and debian/copyright fields.
  * Spell CGI in uppercase.
  * Remove now unused dh-apache2 lintian override.
  * Use balanced quotes '' instead of `' in text.
  * Remove trailing spaces.
  * Update Vcs field URLs.
  * Remove obsolete perl5 alternative dependency.
  * Replace iceweasel with firefox dependency.
  * Add sensible-utils to Suggests.
  * Use https in debian/copyright Format URL.
  * Move location of license on Debian systems into a Comment field in
    debian/copyright file.
  * Bump debhelper compatibility level to 10.
  * Set Rules-Requires-Root to no.
  * Add lintian override for bogus tech-ctte decision imposed onto policy,
    as the less bad of all alternatives.